# tribev2

./: .gitignore  README.md  pyproject.toml  tribe_demo.ipynb  tribe_demo_mac_m2.ipynb
docs/: mlx_dependency_notes.md  mlx_feature_contracts.md  vjepa_mlx_contract.md
tests/: test_analysis_freesurfer.py  test_analysis_vectorize.py  test_backend_tools.py  test_mlx_adapters.py  test_mlx_vjepa_feature_probe.py  test_mlx_vjepa_full_encoder.py  test_mlx_vjepa_preprocessing.py  test_mlx_vjepa_tiny.py  test_mlx_vjepa_tribe_smoke.py  test_notebook_safe_mode.py  test_vectorized_analysis_cli.py  test_vjepa_contract.py  test_vjepa_memory_preflight.py  test_vjepa_reference_aggregation.py  test_vjepa_weight_mapping.py
tools/: aggregate_vjepa_reference_features.py  apple_backend_probe.py  convert_vjepa2_hf_to_mlx.py  estimate_vjepa2_vitg_memory.py  export_vjepa_reference_features.py  inspect_tribe_feature_contracts.py  inspect_vjepa_video_contract.py  run_local_video_prediction_case.py  run_mlx_text_proof.py  run_mlx_vjepa2_feature_probe.py  run_mlx_vjepa2_full_batch.py  run_mlx_vjepa2_tribe_smoke.py  run_notebook_safe.py  run_vectorized_analysis.py  setup_freesurfer_macos.sh
tribev2/: __init__.py  eventstransforms.py
tribev2/analysis/: __init__.py  freesurfer.py  io.py  surface.py  vectorize.py
tribev2/grids/: defaults.py  test_run.py
tribev2/mlx_adapters/: __init__.py  precomputed.py  vjepa2_mlx.py
